<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name" tools:ignore="MissingTranslation">Fejkbiljett</string>
    
    <string name="price_full">Full</string>
    <string name="price_reduced">Reduced</string>
    
    <string name="label_price">Price:</string>
    <string name="label_zone">Zone:</string>
    
    <string name="last_three_digits">Last 3 digits of your phone#:</string>
    
    <string name="menu_create">Create</string>
   	<string name="menu_update">Update!</string>
    <string name="menu_changecity">Change city</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_overlay">Overlay</string>
    
   	<string name="downloading_update">Downloading update:</string>
    
    <string name="ticket_created">A ticket has been created!</string>
    
    <string name="settings_createsmsout">Create outgoing SMS</string>
    <string name="settings_createsmsout_summary">Places an SMS in your outbox as if you have sent it yourself.</string>
    
    <string name="settings_opensmsoncreate">Open SMS app after create</string>
    <string name="settings_opensmsoncreate_summary">Opens your default SMS app when ticket has been created.</string>
    
   	<string name="settings_playsoundvibrate">Play sound and vibrate</string>
    <string name="settings_playsoundvibrate_summary">Will play sound and vibrate according to phone settings.</string>
    
    <string name="settings_smspermission">Give write SMS permission</string>
	<string name="settings_smspermission_summary">As of Android 4.4 (KitKat) Fejkbiljett needs permission to write to SMS store.</string>
	
	<string name="settings_update">Update Fejkbiljett</string>
	<string name="settings_update_summary">Downloads and installs latest version of Fejkbiljett</string>
	<string name="settings_version_up_to_date">Your Fejkbiljett is up to date!</string>
	<string name="settings_version_cant_connect">Can\'t connect to server!</string>	
	<string name="settings_autocheckupdate">Automatic version check</string>
	<string name="settings_autocheckupdate_summary">Checks for new versions when Fejkbiljett is started (at most once a day).</string>
	<string name="checking_version">Checking version...</string>
	
</resources>