<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="create_sms_out"
        android:summary="@string/settings_createsmsout_summary"
        android:title="@string/settings_createsmsout" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="open_sms_on_create"
        android:summary="@string/settings_opensmsoncreate_summary"
        android:title="@string/settings_opensmsoncreate" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="play_sound_vibrate"
        android:summary="@string/settings_playsoundvibrate_summary"
        android:title="@string/settings_playsoundvibrate" />
    <Preference
        android:key="sms_permission"
        android:summary="@string/settings_smspermission_summary"
        android:title="@string/settings_smspermission" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="auto_update"
        android:summary="@string/settings_autocheckupdate_summary"
        android:title="@string/settings_autocheckupdate" />
    <Preference
        android:key="update"
        android:summary="@string/settings_update_summary"
        android:title="@string/settings_update" />
    
</PreferenceScreen>