<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:id="@+id/linearLayout2"
	android:layout_height="wrap_content"
	android:orientation="vertical"
>
	<TextView
		android:layout_marginTop="10dip"
		android:id="@+id/textView3"
		android:layout_width="wrap_content"
		android:text="@string/label_price"
		android:textAppearance="?android:attr/textAppearanceSmall"
		android:layout_height="wrap_content"
		android:layout_marginLeft="10dip"
	></TextView>
	<RadioGroup
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/radio_price"
	>
		<RadioButton
			android:text="@string/price_full"
			android:layout_height="wrap_content"
			android:id="@+id/price_full"
			android:layout_width="wrap_content"
			android:checked="true"
		></RadioButton>
		<RadioButton
			android:text="@string/price_reduced"
			android:layout_height="wrap_content"
			android:id="@+id/price_reduced"
			android:layout_width="wrap_content"
		></RadioButton>
	</RadioGroup>
</LinearLayout>

